# minimap2-lite-rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: bindings.rs  lib.rs
