[package]
name = "minimap2-lite"
version = "0.1.0"
authors = ["dweb0"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.71"
failure = "0.1.8"
seq_io = "0.3.0"

[build-dependencies]
cc = "1.0.54"
